src/test/ui/union/issue-81199.stderr
error[E0277]: the trait bound `T: Pointee` is not satisfied
  --> $DIR/issue-81199.rs:5:17
   |
LL |     components: PtrComponents<T>,
   |                 ^^^^^^^^^^^^^^^^ the trait `Pointee` is not implemented for `T`
   |
note: required by a bound in `PtrComponents`
  --> $DIR/issue-81199.rs:10:25
   |
LL | struct PtrComponents<T: Pointee + ?Sized> {
   |                         ^^^^^^^ required by this bound in `PtrComponents`
help: consider further restricting this bound
   |
LL | union PtrRepr<T: ?Sized + Pointee> {
   |                         +++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
